# nexos_router_poc

./: .env.template  README.md  pyproject.toml
notebooks/: eda_arena.ipynb  eda_mmlu.ipynb  eda_stanford_mmlu.ipynb  evaluate_models.ipynb
scripts/: download_data.py  train_models.py  vectorize_data.py
src/router_poc/: router.py  settings.py  vectors.py
