[project]
name = "router-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Julius Juodagalvis",email = "julius.juodagalvis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "router_poc", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
